fix body overflow

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,12 +20,15 @@
 	}
 }
 
-
-body._lock {
-	@include md-max {
-		overflow: hidden;
+.wrapper{
+	&._lock{
+		@include md-max {
+			overflow: hidden;
+			position: fixed;
+		}
 	}
 }
+
 
 
 .top-header {
